linkerd/httpRoute.yaml
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: backend-router
  namespace: test
spec:
  parentRefs:
    - name: backend-a
      kind: Service
      group: core
      port: 8080
  rules:
    - matches:
      - headers:
        - name: "x-backend"
          value: "test"
      backendRefs:
        - name: "backend-b"
          port: 8080
    - backendRefs:
      - name: "backend-a"
        port: 8080
